# cpp-project-template

./: .clang-format  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  init.cmake  init.sh  vcpkg.json
.github/: ci.yaml
.github/actions/darwin/base/: action.yaml
.github/actions/darwin/gcc/: action.yaml
.github/actions/darwin/msvc/: action.yaml
.github/actions/darwin/x86/: action.yaml
.github/actions/install-dependencies/: action.yaml
.github/actions/linux/base/: action.yaml
.github/actions/linux/clang/: action.yaml
.github/actions/linux/gcc/: action.yaml
.github/actions/linux/x86/: action.yaml
.github/actions/vcpkg-cache/: action.yaml
.github/actions/wasi/base/: action.yml
.github/actions/wasi/clang/: action.yml
.github/actions/wasi/wasm32/: action.yml
.github/actions/windows/base/: action.yaml
.github/actions/windows/clang/: action.yaml
.github/workflows/: ci.yaml  ci.yml
cmake/presets/: arm64-darwin-clang.json  arm64-darwin-gcc.json  base.json  linux-base.json  linux-gcc.json  linux.json  wasm32-wasi-clang.json  x64-darwin-clang.json  x64-darwin-gcc.json  x64-linux-clang.json  x64-linux-gcc.json  x64-windows-clang.json  x64-windows-msvc.json  x86-linux-clang.json  x86-linux-gcc.json
cmake/presets/common/: ninja.json  vcpkg.json
cmake/presets/compilers/: clang.json  gcc.json  msvc.json
cmake/presets/linux/: all.json  base.json  gcc.json
cmake/presets/os/: darwin.json  linux.json  windows.json
cmake/presets/presets/: linux-clang.json
cmake/presets/presets/generators/: ninja.json
cmake/presets/presets/toolchains/: vcpkg.json
cmake/presets/toolchains/: vcpkg.json  wasi-sdk.json
cmake/toolchains/: wasi-sdk.toolchain.cmake
cmake/vcpkg/: vcpkg.toolchain.cmake  vcpkg_autodetect_target_triplet.cmake  vcpkg_bootstrap.cmake
cmake/vcpkg/bootstrap/: vcpkg-config.cmake  vcpkg_autodetect_host_triplet.cmake  vcpkg_autodetect_target_triplet.cmake  vcpkg_bootstrap.cmake  vcpkg_configure.cmake  vcpkg_skip_install_on_reconfigure.cmake
cmake/vcpkg/ports/wasm32-wasi/fmt/: 002-disable-posix-fd.patch  README.md  portfile.cmake  usage  vcpkg.json
cmake/vcpkg/triplets/: wasm32-wasi.cmake  x64-linux-clang-dynamic.cmake  x86-linux-clang-dynamic.cmake  x86-linux-dynamic.cmake
cmake/wasi-sdk/: wasi-sdk.toolchain.cmake  wasi-sdk_bootstrap.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_cpp_project_template_executable.cmake  add_cpp_project_template_module.cmake  add_cpp_pt_executable.cmake  add_cpp_pt_module.cmake  add_cxx_module.cmake  cpp-project-template-config.cmake  cpp-pt-config.cmake  cpp-pt-install-targets.cmake  cxx-config.cmake  set_cpp_pt_target_properties.cmake
src/core/: CMakeLists.txt
src/core/include/cxx/core/: optional.hpp
src/module-1/: CMakeLists.txt
src/module-1/include/cpp-pt/module-1/: header-1.hpp
src/module-1/src/: header-1.cpp
src/wasm/: CMakeLists.txt
src/wasm/include/: interface.hpp
src/wasm/src/: interface.cpp
tests/: CMakeLists.txt
tests/cmake/: add_cpp_project_template_test.cmake  add_cpp_pt_test.cmake  add_cxx_test.cmake
tests/core/: CMakeLists.txt  optional_test.cpp
tests/module-1/: CMakeLists.txt  header-1_test.cpp
